test/scc_test/exp/semantic-errors/088.t
void test()
{
    struct A* a;
    char* b;
    a == b;
}